--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="../AsMdzT/img-/logo-AS.webp" alt="Logo As Mendoza Traslados" width="40" height="40" class="me-2 rounded-circle">
+        <img src="./images/logo-AS.webp" alt="Logo As Mendoza Traslados" width="40" height="40" class="me-2 rounded-circle">
         <span class="fw-bold">As Mendoza Traslados</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navBar">
@@ -144,7 +144,7 @@
           <!-- Cards de servicio -->
           <div class="col-md-6 col-lg-3">
             <div class="card servicio-card h-100 shadow">
-              <img src="../AsMdzT/img-/aeropuerto.jpg" class="card-img-top" alt="Servicio Aeropuerto">
+              <img src="./images/aeropuerto.jpg" class="card-img-top" alt="Servicio Aeropuerto">
               <div class="card-body">
                 <h5 class="card-title">Aeropuerto</h5>
                 <p class="card-text">Traslados rápidos y puntuales al aeropuerto internacional.</p>
@@ -153,7 +153,7 @@
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="card servicio-card h-100 shadow">
-              <img src="../AsMdzT/img-/foto-ejecutivo.jpg" class="card-img-top" alt="Servicio Ejecutivo">
+              <img src="./images/foto-ejecutivo.jpg" class="card-img-top" alt="Servicio Ejecutivo">
               <div class="card-body">
                 <h5 class="card-title">Ejecutivos</h5>
                 <p class="card-text">Ideal para viajes corporativos y ejecutivos exigentes.</p>
@@ -162,7 +162,7 @@
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="card servicio-card h-100 shadow">
-              <img src="../AsMdzT/img-/foto-bodega.webp" class="card-img-top" alt="Servicio Turismo">
+              <img src="./images/foto-bodega.webp" class="card-img-top" alt="Servicio Turismo">
               <div class="card-body">
                 <h5 class="card-title">Turismo</h5>
                 <p class="card-text">Recorre bodegas, montañas y paisajes únicos de Mendoza.</p>
@@ -171,7 +171,7 @@
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="card servicio-card h-100 shadow">
-              <img src="../AsMdzT/img-/foto-evento.webp" class="card-img-top" alt="Servicio Eventos">
+              <img src="./images/foto-evento.webp" class="card-img-top" alt="Servicio Eventos">
               <div class="card-body">
                 <h5 class="card-title">Eventos</h5>
                 <p class="card-text">Logística de movilidad para bodas, fiestas y congresos.</p>
@@ -188,7 +188,7 @@
         <h2 class="section-title">¿Quiénes Somos?</h2>
         <div class="row align-items-center">
           <div class="col-md-6 mb-4 mb-md-0">
-            <img src="../AsMdzT/img-/FOTO1.PNG" alt="Transporte As Mendoza" class="img-fluid rounded shadow">
+            <img src="./images/FOTO1.PNG" alt="Transporte As Mendoza" class="img-fluid rounded shadow">
           </div>
           <div class="col-md-6">
             <p class="fs-5">
